kbuild: publish modules.tar.gz for each kernel flavour
This patch updates the build/release scripts to upload a tarball of
the kernel modules for each flavour.

The new files in astore are:

  kernel/<branch>/<flavour>/modules.tar.gz

Fixes: INFRA-1041
Fixes: INFRA-1046

Signed-off-by: Curt Brune <curt@enfabrica.net>

--- a/kbuild/v2/README.adoc
+++ b/kbuild/v2/README.adoc
@@ -24,6 +24,33 @@ this:
 The "kernel" path in astore is the root of all the published kernel
 artifacts.  See `kpub-astore -h` for more options to control the build.
 
+== Build Time Dependencies
+
+Building all the kernel Debian packages requires a number of
+development packages to be installed on the build host.  The following
+needs to be installed:
+
+```
+  $ sudo apt install \
+            build-essential  \
+            kernel-wedge     \
+            grep-dctrl       \
+            flex             \
+            bison            \
+            libudev-dev      \
+            libusb-dev       \
+            fakeroot         \
+            libpci-dev       \
+            libssl-dev       \
+            libelf-dev       \
+            libiberty-dev    \
+            libcap-dev       \
+            python3-docutils \
+            asciidoc         \
+            zstd
+
+```
+
 == The Inputs
 
 The inputs to `kpub-astore` are:
