kbuild: combine vmlinuz and modules.tar.gz into a single artifact
This patch combines the vmlinuz kernel image and the modules.tar.gz
artifacts into a single artifact, called vmlinuz-modules.tar.gz.

The format of the tarball is:

  boot/vmlinuz-<kernel-version>
  lib/modules/<kernel-version>/...

This patch also removes the modules.tar.gz for the UML variant as it
is not needed.

Signed-off-by: Curt Brune <curt@enfabrica.net>

--- a/kbuild/v2/README.adoc
+++ b/kbuild/v2/README.adoc
@@ -106,6 +106,12 @@ following arguments:
     -a   Install APT sources.list.d config
 ```
 
+=== Tarball of Kernel Image and Modules
+
+This is a tarball of the kernel vmlinuz image and all the modules from
+`lib/modules/<kernel-version>`.  This tarball is used by bazel to run
+tests using QEMU.
+
 === UML Kernel Image
 
 The script also publishes a UML kernel image to astore.  Bazel uses
