kbuild: do not build the UML kernel
Signed-off-by: George Prekas <george@enfabrica.net>

--- a/kbuild/v2/README.adoc
+++ b/kbuild/v2/README.adoc
@@ -27,7 +27,6 @@ following paths:
 
   kernel/enf/impish-19.19/generic  (Ubuntu generic)
   kernel/enf/impish-19.19/minimal  (Ubuntu minimal)
-  kernel/enf/impish-19.19/test     (UML)
 
 The build outputs a Bazel file, suitable for checking into the
 internal repo in `bazel/kernel.version.bzl`.
@@ -95,8 +94,7 @@ within bazel.
 This tarball includes an `install` script that bazel executes when
 unpacking the tarball.
 
-The script publishes a separate tarball for each kernel flavour and
-also one for the UML kernel.
+The script publishes a separate tarball for each kernel flavour.
 
 === Debian APT Repo Tarballs
 
@@ -117,11 +115,6 @@ following arguments:
 This is a tarball of the kernel vmlinuz image and all the modules from
 `lib/modules/<kernel-version>`.  This tarball is used by bazel to run
 tests using QEMU.
-
-=== UML Kernel Image
-
-The script also publishes a UML kernel image to astore.  Bazel uses
-the UML kernel image to run UML kunit tests.
 
 == Install Kernel Packages via APT
 
@@ -200,20 +193,3 @@ because bazel requires that.
 
 The URL for the Debian APT repo archive is marked as private in
 astore.
-
-=== `build-uml.sh`
-
-This script compiles the User Model Linux kernel image (arch=um).
-
-=== `archive-bazel-uml.sh`
-
-This script creates a bazel ready tarball of kernel header files for
-building UML kernel modules.
-
-=== `upload-uml.sh`
-
-This script uploads the UML bazel archive and UML kernel image to
-astore.
-
-Both the bazel header file tarball and kernel image are marked as
-"public", because bazel requires that.
